--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,8 @@ body, html {
 #goal {
     width: 50px;
     height: 50px;
-    background-color: green;
+    background-image: url('images/763.jpg'); /* Vervang 'doel_afbeelding.jpg' door het pad naar jouw afbeelding voor de goal */
+    background-size: cover; /* Past de afbeelding aan zodat deze de volledige goal bedekt */
     position: absolute;
     top: 80%;
     left: 80%;
