--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body, html {
     height: 500px;
     margin: 50px auto;
     border: 2px solid black;
-    background-image: url('images/ixLsWe8v-G8HnyX5F2UIGmy_s278YKT_17ALufTq4QsmFSW_Zv_TyMImWpuhutsUBma-ntCAvAAqaA0Va39JMUCazrgQxgCpDXTh.png'); /* Vervang 'achtergrondafbeelding.jpg' door het pad naar jouw achtergrondafbeelding */
+    background-image: url('images/istockphoto-866061030-1024x1024.jpg'); /* Vervang 'achtergrondafbeelding.jpg' door het pad naar jouw achtergrondafbeelding */
     background-size: cover; /* Past de afbeelding aan zodat deze de volledige container bedekt */
     background-position: center; /* Plaatst de afbeelding in het midden van de container */
 }
@@ -18,7 +18,7 @@ body, html {
 #ball {
     width: 50px;
     height: 50px;
-    background-image: url('images/image.png'); /* Vervang 'bal_afbeelding.jpg' door het pad naar jouw afbeelding voor de bal */
+    background-image: url('images/AHI_43545239363730323839.jpg'); /* Vervang 'bal_afbeelding.jpg' door het pad naar jouw afbeelding voor de bal */
     background-size: cover; /* Past de afbeelding aan zodat deze de volledige bal bedekt */
     border-radius: 50%;
     position: absolute;
