--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body, html {
 #ball {
     width: 50px;
     height: 50px;
-    background-image: url('images/AHI_43545239363730323839.jpg'); /* Vervang 'bal_afbeelding.jpg' door het pad naar jouw afbeelding voor de bal */
+    background-image: url('images/image.png'); /* Vervang 'bal_afbeelding.jpg' door het pad naar jouw afbeelding voor de bal */
     background-size: cover; /* Past de afbeelding aan zodat deze de volledige bal bedekt */
     border-radius: 50%;
     position: absolute;
@@ -30,7 +30,7 @@ body, html {
 #goal {
     width: 50px;
     height: 50px;
-    background-image: url('images/763.jpg'); /* Vervang 'doel_afbeelding.jpg' door het pad naar jouw afbeelding voor de goal */
+    background-image: url('images/AHI_43545239363730323839.jpg'); /* Vervang 'doel_afbeelding.jpg' door het pad naar jouw afbeelding voor de goal */
     background-size: cover; /* Past de afbeelding aan zodat deze de volledige goal bedekt */
     position: absolute;
     top: 80%;
