--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     height: 100%;
+    background-color: #f2f2f2; /* lichtgrijze achtergrondkleur */
 }
 
 #game-container {
